# github-issues-import

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/github_issues_import/: client.py  models.py
tests/: test_client.py  test_models.py  utils.py
tests/fixtures/: request-issue-and-comment-fields.json  request-issue-comments-no-date.json  request-issue-without-comments.json  request-start-issue-import.json  response-multiple-check-status-of-multiple-issues.json  response-single-check-status-of-issue-import.json  response-single-failure-import-status-comment.json  response-single-failure-import-status-invalid-property.json  response-single-start-an-issue-import.json  response-single-start-import-with-created-date.json
